# CMake

./: .gitignore  README.md
Tutorials/: README.md
Tutorials/01 A Basic Starting Point/1. Build and Run/: CMakeLists.txt  tutorial.cxx
Tutorials/01 A Basic Starting Point/2. Adding a Version Number and Configured Header File/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
Tutorials/01 A Basic Starting Point/3. Specify the C++ Standard/: CMakeLists.txt  build.cmd  tutorial.cxx
Tutorials/02 Adding a Library/: CMakeLists.txt  TutorialConfig.h.in  build.cmd
Tutorials/02 Adding a Library/MathFunctions/: CMakeLists.txt  MathFunctions.h
Tutorials/03 Add Usage Requirements for a Library/: CMakeLists.txt
Tutorials/03 Add Usage Requirements for a Library/MathFunctions/: CMakeLists.txt  mysqrt.cxx
Tutorials/04 Installing and Testings/A. Install Rules/: CMakeLists.txt  build.cmd  tutorial.cxx
Tutorials/04 Installing and Testings/A. Install Rules/MathFunctions/: CMakeLists.txt
Tutorials/04 Installing and Testings/A. Install Rules/install_dir/include/: TutorialConfig.h
Tutorials/04 Installing and Testings/B. Testing Support/: CMakeLists.txt  build.cmd
